add swagPutVarBoolToFalse
