# api/swagger.yaml
@@ -89,6 +89,24 @@ paths:
           description: "Bad request - Could not read variable"
       # x-swagger-router-controller: "Default"
     x-swagger-router-controller: "adsctrl"
+  /spsVarBoolToFalse/{spsVarName}:
+    put:
+      summary: "Set value of PLC variable {spsVarName} of type BOOL to false"
+      description: ""
+      operationId: "swagPutVarBoolToFalse"
+      parameters:
+      - name: "spsVarName"
+        in: "path"
+        description: "Variable name"
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "Successful response"
+        400:
+          description: "Bad request - Could not read variable"
+      # x-swagger-router-controller: "Default"
+    x-swagger-router-controller: "adsctrl"
   /spsVarBoolHomeBridge/{spsVarName}:
     get:
       summary: "Read value of PLC variable {spsVarName} of type BOOL"
